# FamilyPhotosServer

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  build.gradle.kts  native-image.sh  renovate.json  settings.gradle.kts  sqlx-data.json
.github/workflows/: rust.yml
.sqlx/: query-0a476341d1b19875b7f386ff8d2bd72de206e51bc58922b54d488dae0b3f69ab.json  query-21a3051127145ddc300edb0993b279f59fb2b0e371ed7c3a9d07acc8c85651da.json  query-25fd2aeb03c872bd45e1a399dea2ba5f2804ed094ddc27eee424a724d2b4684b.json  query-2d751f84e68c2962b06a5f69426079e517a0d0236cde9f26b35a60e8878c36fe.json  query-3d95cb60f1dc4e0005583cc3c9d14e553fb90146b405e667ea684512819824b8.json  query-49dddeb7eaaee27431875adf21fbb40b1e65335d70d2cc29f05ec8e5516d8d9a.json  query-4dc1e7b608cd056bd0d838b21653f251a57ef2e53aa1d77bf096970f2a0383cc.json  query-4ec54d5a3a31f8a2eca3015bf82908821dd704cf676aa3fedc8ddb3f4f9ee73b.json  query-5c4a66baae121865ef985a43f3e4bcdca2896e8bec9daa21a41247d11f029217.json  query-7609165d94c8f1bea9d535b9b7ad727fd06592973d7f83017292d41acb203be6.json  query-7edc82ecfc994c8201c1c4a7ac38ada98dfe6c572366788a4e9bf8a9b2158345.json  query-89586179c7c2207cd29bd075a4fd4c03fcef80bc348360781fdf9d05c22172fe.json  query-8b69e27423243cfaca3d56c5462f7b52547d71228cd996e37e0a00f04042306f.json  query-9c58013be15e42a567f0739ae51c1cad80058efcfd78d3e223564476ff30ca9c.json  query-c6b37fc8c7116e4a7c9e4671cdbecfa52e2121def2eec61d8ebed0fec2375314.json  query-c7cade7d96ffc7ea173518ae2b1c7f8594842ce7ca6aee574fe97eee698ffef1.json  query-d8863f4514c594e1fc96f02b866b4de9d27510807aceb687297e7d48705c2043.json  query-dce290d77a56c4a75d26465e7e588853af229f63527222c8e3236422c27c9665.json  query-e864ae527ab535ca32cbc15b5177080954fb45f60cb5f819937ea20fc57b3fbb.json  query-faf15146cad6e358687b2f0f179342155218e66f1669bcb6ab78cf204c952a06.json
migrations/: 20230701085458_user.sql  20230701090537_photo.sql  20230701090639_photo_index.sql  20230703070447_session.sql  20230704083316_rename_photo_user_id.sql  20231107221641_remove_session.sql  20231201091914_favorite_photos.sql  20241230121022_tables.sql
migrations/2022-08-15-135720_add_user/: up.sql
migrations/2022-08-15-140540_add_photos/: down.sql  up.sql
migrations/2023-02-12-071529_add_photo_caption/: down.sql  up.sql
migrations/2023-03-22-191033_make_user_name_unique/: down.sql  up.sql
src/: cli.rs  main.rs  schema.rs
src/api/: home.rs  mod.rs  photos.rs  photos_api.rs  status_error.rs  users.rs  users_api.rs
src/db/: mod.rs  photos.rs  photos_db.rs  users.rs  users_db.rs  utils.rs
src/file_scan/: data_scan.rs  mod.rs  timestamp.rs
src/http/: mod.rs  photos.rs  photos_api.rs  users.rs  users_api.rs  utils.rs
src/http/utils/: mod.rs  status_error.rs
src/main/kotlin/net/theluckycoder/familyphotos/: FamilyPhotosApplication.kt  StartData.kt
src/main/kotlin/net/theluckycoder/familyphotos/configs/: AsyncConfiguration.kt  FileStorageProperties.kt  SecurityConfiguration.kt  TcNativeConfig.java
src/main/kotlin/net/theluckycoder/familyphotos/controller/: HomeController.kt  PhotosController.kt  UserController.kt
src/main/kotlin/net/theluckycoder/familyphotos/exceptions/: FileStorageException.kt  PhotoNotFoundException.kt  UserNotFoundException.kt
src/main/kotlin/net/theluckycoder/familyphotos/extensions/: Extensions.kt  LoggerExtensions.kt
src/main/kotlin/net/theluckycoder/familyphotos/model/: Photo.kt  SimpleUser.kt  User.kt
src/main/kotlin/net/theluckycoder/familyphotos/repository/: PhotoRepository.kt  UserRepository.kt
src/main/kotlin/net/theluckycoder/familyphotos/service/: FileStorageService.kt  MyUserDetailsService.kt
src/main/kotlin/net/theluckycoder/familyphotos/utils/: IdGenerator.kt  Md5ShallowEtagHeaderFilter.kt
src/main/kotlin/net/theluckycoder/homeserver/photos/: PhotosApplication.kt  StartData.kt
src/main/resources/: application.properties
src/main/resources/keystore/: pi400.p12
src/model/: mod.rs  photo.rs  user.rs
src/previews/: generate.rs  manager.rs  mod.rs
src/repo/: mod.rs  pg_session_store.rs  photos_repo.rs  session_repo.rs  users_repo.rs
src/test/kotlin/net/theluckycoder/homeserver/photos/: PhotosApplicationTests.kt
src/thumbnail/: generate.rs  manager.rs  mod.rs
src/utils/: data_init.rs  data_scan.rs  db.rs  db_utils.rs  env_reader.rs  file_storage.rs  mod.rs  password_hash.rs  pg_session_store.rs  primitive_date_time_serde.rs  storage_resolver.rs  thumbnail.rs
(+17 files in other folders)
