[package]
name = "familyphotos"
authors = ["Filea Răzvan-Gheorghe <razvan.filea@gmail.com>"]
version = "3.2.1"
edition = "2021"

[profile.release]
incremental = true
lto = "fat"

[dependencies]
# Async Runtime
tokio = { version = "1.37.0", features = ["rt-multi-thread", "fs", "io-std", "macros"] }
tokio-util = { version = "0.7.10", features = ["io"] }
futures-util = { version = "0.3.30", default-features = false, features = ["std"] }
rayon = "1.10"
async-trait = "0.1.80"

# Axum
axum = { version = "0.7.5", features = ["multipart"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
axum-login = "0.15.1"
tower-sessions-sqlx-store = { version = "0.12", features = ["postgres"] }

# Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Database
sqlx = { version = "0.7.4", features = ["runtime-tokio", "macros", "time", "postgres", "migrate"] }

# Serialization
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"

# Rand
rand = "0.8.5"

# Utils
clap = { version = "4.5.4", features = ["derive", "cargo"] }
lazy_static = "1.4.0"
regex = "1.10.4"
wait-timeout = "0.2"
time = { version = "0.3.36", features = ["macros", "parsing"] }
dotenvy = "0.15.7"
walkdir = "2.5"
mime_guess = "2.0.4"
anyhow = "1.0.82"
kamadak-exif = "0.5.5"

# Crypto
argon2 = { version = "0.5.3", features = ["std"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5.4"

[profile.dev.package.sqlx-macros]
opt-level = 3
