[package]
name = "familyphotos"
authors = ["Filea Răzvan-Gheorghe <razvan.filea@gmail.com>"]
version = "3.2.2"
edition = "2021"

[profile.release]
incremental = true
lto = "fat"

[dependencies]
# Async Runtime
tokio = { version = "1", features = ["rt-multi-thread", "fs", "io-std", "macros"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
rayon = "1.10"
async-trait = "0.1"

# Axum
axum = { version = "0.7", features = ["multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
axum-login = "0.15"
tower-sessions-sqlx-store = { version = "0.13", features = ["postgres"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "macros", "time", "postgres", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utils
clap = { version = "4.5", features = ["derive", "cargo"] }
regex = "1"
wait-timeout = "0.2"
time = { version = "0.3", features = ["macros", "parsing"] }
dotenvy = "0.15"
walkdir = "2.5"
mime_guess = "2"
anyhow = "1"
kamadak-exif = "0.5"
rand = "0.8"

# Crypto
argon2 = { version = "0.5", features = ["std"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[profile.dev.package.sqlx-macros]
opt-level = 3
