[package]
name = "familyphotos"
authors = ["Filea Răzvan-Gheorghe <razvan.filea@gmail.com>"]
version = "3.2.3"
edition = "2021"

[profile.release]
incremental = true
lto = "fat"

[dependencies]
# Async Runtime
tokio = { version = "1", features = ["rt-multi-thread", "fs", "io-std", "macros", "signal"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
rayon = "1.10"
async-trait = "0.1"

# Axum
axum = { version = "0.7", features = ["multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
axum-login = "0.16"
tower-sessions-sqlx-store = { version = "0.14", features = ["postgres"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "macros", "time", "postgres", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utils
clap = { version = "4.5", features = ["derive", "cargo"] }
regex = "1"
wait-timeout = "0.2"
time = { version = "0.3", features = ["macros", "parsing"] }
dotenvy = "0.15"
walkdir = "2.5"
mime_guess = "2"
anyhow = "1"
kamadak-exif = "0.6"
rand = "0.8"

# Crypto
argon2 = { version = "0.5", features = ["std"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
